Início do front da página login

--- a/Front/src/Style/variables.sass
+++ b/Front/src/Style/variables.sass
@@ -4,3 +4,4 @@ $color-gray-80: #b8b8b8
 	
 $main-color: #5400BC
 $color-puple-80: #a86cf3
+$gradient-color: linear-gradient(90deg, #5400BC, #330071)
