´Front do login finalizado

--- a/Front/src/Style/variables.sass
+++ b/Front/src/Style/variables.sass
@@ -1,7 +1,8 @@
 $background: #F9F9F9
 $color-gray-letter: #535353
 $color-gray-80: #b8b8b8
+$color-white: #FFFFFF
 	
 $main-color: #5400BC
 $color-puple-80: #a86cf3
-$gradient-color: linear-gradient(90deg, #5400BC, #330071)
+$gradient-color: linear-gradient(160deg, #5400BC, #330071)
