--- a/Front/src/Componets/Button/style.sass
+++ b/Front/src/Componets/Button/style.sass
@@ -1,18 +1,17 @@
 @use '../../Style/variables'
 	
 .btn
-  padding: 1rem 2rem
+  padding: 0 2rem
   font-weight: 700
   background: variables.$background
   color: variables.$main-color
   cursor: pointer
   border-radius: 0.5rem
-  border-bottom: 2px solid variables.$main-color
-  border-right: 2px solid variables.$main-color
-  border-top: 2px solid white
-  border-left: 2px solid white
+  border: 2px solid variables.$main-color
   transition-duration: 1s
   transition-property: border-top, border-left, border-bottom, border-right, box-shadow
+  margin: 2rem 0
+  height: 2.5rem
 
 
 .btn:hover 
