--- a/Front/src/Page/Login/style.sass
+++ b/Front/src/Page/Login/style.sass
@@ -1,11 +1,73 @@
-@use '../../Style/main'
 @use '../../Style/variables'
+@use '../../Style/main'
 
 .container
     width: 100%
-    height: 100%
+    height: 100vh
+    display: flex
+    align-items: center
+    justify-content: center
+    background-color: variables.$background
 
     .container-login
         display: flex
-        align-items: center
-        justify-content: center
+        width: 60%
+        height: 75%
+
+        .login-informations, .login-forms
+            width: 50%
+            padding: 5rem 0 
+
+        .login-informations
+            background: variables.$gradient-color
+            border-radius: 10px 0 0 10px
+            color: variables.$color-white
+            display: flex
+            flex-direction: column
+            align-items: center
+            gap: 4rem
+
+            .text
+                display: flex
+                flex-direction: column
+                justify-content: center
+                align-items: center
+                text-align: center
+                gap: 1rem
+                width: 50%
+                height: 50%
+
+                h1
+                    font-size: 35px
+
+                p
+                    font-size: 20px
+
+        .login-forms
+            background-color: variables.$color-white
+            border-radius: 0 10px 10px 0
+            display: flex
+            flex-direction: column
+            justify-content: space-evenly
+            align-items: center
+            text-align: center
+
+            form
+                width: 80%
+            
+                .container-input
+                    display: flex
+                    flex-direction: column
+                    margin-top: 2rem
+            
+            p
+                margin-top: 2rem
+
+                .link
+                    color: variables.$main-color
+                    font-weight: 500
+                    cursor: pointer
+                    transition: all .2s
+
+                    &:hover
+                        color: variables.$color-puple-80
