Front do cadastro finalizado

--- a/Front/src/Page/Register/style.sass
+++ b/Front/src/Page/Register/style.sass
@@ -1,23 +1,24 @@
 @use '../../Style/variables'
 @use '../../Style/main'
 
-.login-container
+.register-container
     width: 100%
     height: 100vh
     display: flex
-    align-items: center
     justify-content: center
+    margin-bottom: 2rem
 
     .container
         display: flex
         width: 60%
-        height: 75%
+        height: auto
+        margin-top: 5rem
 
-        .container-informations, .login-forms
+        .container-informations, .register-forms
             width: 50%
             padding: 5rem 0 
 
-        .login-forms
+        .register-forms
             background-color: variables.$color-white
             border-radius: 0 10px 10px 0
             display: flex
