--- a/Front/src/Componets/Button/style.sass
+++ b/Front/src/Componets/Button/style.sass
@@ -15,8 +15,5 @@
 
 
 .btn:hover 
-  border-top: 2px solid variables.$main-color
-  border-left: 2px solid variables.$main-color
-  border-bottom: 2px solid variables.$color-puple-80
-  border-right: 2px solid variables.$main-color
+  border: 2px solid variables.$color-puple-80
   box-shadow: rgba(168, 108, 243, 0.4) 3px 3px, rgba(168, 108, 243, 0.3) 5px 5px, rgba(168, 108, 243, 0.2) 10px 10px
