--- a/Front/src/Style/main.sass
+++ b/Front/src/Style/main.sass
@@ -1,8 +1,12 @@
+@use './variables'
+
 *
     margin: 0
     padding: 0
     box-sizing: border-box
     font-family: "Poppins", sans-serif
 
+body
+    background-color: variables.$background
 h2
     font-size: 20px
