--- a/Front/src/Page/Login/style.sass
+++ b/Front/src/Page/Login/style.sass
@@ -13,35 +13,8 @@
         width: 60%
         height: 75%
 
-        .container-informations, .login-forms
+        .container-informations, .container-forms
             width: 50%
             padding: 5rem 0 
 
-        .login-forms
-            background-color: variables.$color-white
-            border-radius: 0 10px 10px 0
-            display: flex
-            flex-direction: column
-            justify-content: space-evenly
-            align-items: center
-            text-align: center
-
-            form
-                width: 80%
-            
-                .container-input
-                    display: flex
-                    flex-direction: column
-                    margin-top: 2rem
-            
-            p
-                margin-top: 2rem
-
-                .link
-                    color: variables.$main-color
-                    font-weight: 500
-                    cursor: pointer
-                    transition: all .2s
-
-                    &:hover
-                        color: variables.$color-puple-80
+        
