--- a/Front/src/Style/main.sass
+++ b/Front/src/Style/main.sass
@@ -7,6 +7,6 @@
     font-family: "Poppins", sans-serif
 
 body
-    background-color: variables.$background
+    background-color: variables.$color-gray-90
 h2
     font-size: 20px
