--- a/Front/src/Componets/Button/style.sass
+++ b/Front/src/Componets/Button/style.sass
@@ -3,7 +3,7 @@
 .btn
   padding: 0 2rem
   font-weight: 700
-  background: variables.$background
+  background: variables.$color-gray-90
   color: variables.$main-color
   cursor: pointer
   border-radius: 0.5rem
