--- a/Front/src/Page/Register/style.sass
+++ b/Front/src/Page/Register/style.sass
@@ -10,10 +10,10 @@
 
     .container
         display: flex
-        width: 60%
+        width: auto
         height: auto
         margin-top: 5rem
 
         .container-informations, .container-forms
             width: 50%
-            padding: 5rem 0 
+            padding: 5rem 0
