Integração do back com o front, e alguns ajustes

--- a/Front/src/Componets/Header/style.sass
+++ b/Front/src/Componets/Header/style.sass
@@ -17,6 +17,9 @@ header
         ul
             display: flex
             list-style-type: none
+
+            .link
+                text-decoration: none
             
             li
                 padding: 0 1rem
