--- a/Front/src/Componets/Table/style.sass
+++ b/Front/src/Componets/Table/style.sass
@@ -3,7 +3,7 @@
 table
     background-color: variables.$color-white
     border-radius: 0.2rem
-    margin-top: 12vh
+    margin-top: 2rem
     margin-bottom: 2rem
     width: 82vw
     height: auto
@@ -23,7 +23,7 @@ table
                 width: 20rem
 
         .actionData
-            width: 4rem
+            width: 5rem
 
     tbody
 
@@ -49,8 +49,20 @@ table
                     margin-left: 0.5rem
 
                 .userPen
-                    color: rgb(167, 167, 167)
+                    color: rgb(88, 88, 88)
 
                 .trash:hover, .userPen:hover
-                    color: rgb(207, 207, 207)
+                    color: rgb(177, 177, 177)
                     transition: all .3s
+
+.green
+    background-color: green
+    border-radius: 50%
+    height: 2rem
+    width: 2rem
+
+.red
+    background-color: red
+    border-radius: 50%
+    height: 2rem
+    width: 2rem
