--- a/Front/src/Page/Login/style.sass
+++ b/Front/src/Page/Login/style.sass
@@ -8,6 +8,14 @@
     align-items: center
     justify-content: center
 
+    .background-loading
+        background: radial-gradient(circle,rgba(255, 255, 255, 1) 0%, rgba(209, 209, 209, 1) 34%, rgba(84, 44, 133, 1) 59%, rgba(51, 0, 113, 1) 80%)
+        width: 100%
+        height: 100%
+        display: flex
+        align-items: center
+        justify-content: center
+
     .container
         display: flex
         width: 60%
@@ -17,4 +25,10 @@
             width: 50%
             padding: 5rem 0 
 
-        
+@keyframes gradientPulse
+    0% 
+        background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(209, 209, 209, 1) 34%, rgba(84, 44, 133, 1) 59%, rgba(51, 0, 113, 1) 80%)
+    50% 
+        background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(209, 209, 209, 1) 34%, rgba(84, 44, 133, 1) 50%, rgba(51, 0, 113, 1) 100%)
+    100% 
+        background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(209, 209, 209, 1) 1%, rgba(84, 44, 133, 1) 59%, rgba(51, 0, 113, 1) 80%)
