--- a/Front/src/Componets/Modal/style.sass
+++ b/Front/src/Componets/Modal/style.sass
@@ -15,12 +15,10 @@
     padding: 1rem 2rem
     border-radius: 0.2rem
     height: 90%
-    width: 50%
     max-width: 65%
-    overflow: auto
     display: flex
-    align-items: center
     flex-direction: column
+    overflow-y: auto
 
     .modalHeader
       display: flex
