--- a/Front/src/Componets/Input/style.sass
+++ b/Front/src/Componets/Input/style.sass
@@ -68,7 +68,11 @@
 		&:focus,
 		&:active 
 			outline: none
-
+		
+	.textInput[disabled]
+		border-bottom: 2px solid variables.$main-color
+		cursor: not-allowed
+		opacity: 0.6
 
 	&:focus-within .textInput,
 	&.textInput:focus,
