Foi adicionado as funcionalidades de exportar e importar no front e alguns efeitos foram inseridos

--- a/Front/src/Componets/Table/style.sass
+++ b/Front/src/Componets/Table/style.sass
@@ -26,6 +26,8 @@ table
 
     tbody
         tr
+            height: 10vh
+            
             td, th
                 width: calc(100% / 6)
 
