--- a/Front/src/Page/DataSensor/style.sass
+++ b/Front/src/Page/DataSensor/style.sass
@@ -30,5 +30,5 @@
                 border: none
                 cursor: pointer
 
-                button:hover
-                    color: variables.$gradient-color
+                &.disabled
+                    opacity: 0.2
