--- a/Front/src/Componets/Modal/style.sass
+++ b/Front/src/Componets/Modal/style.sass
@@ -14,7 +14,7 @@
     background-color: #fff
     padding: 1rem 2rem
     border-radius: 0.2rem
-    height: 90%
+    height: auto
     max-width: 65%
     display: flex
     flex-direction: column
