Foi realizado validações para o cadastro dos sensores e a adaptação automática dos forms. Além de ter incluído um footer nas páginas.

--- a/Front/src/Componets/Header/style.sass
+++ b/Front/src/Componets/Header/style.sass
@@ -18,6 +18,13 @@ header
             display: flex
             list-style-type: none
 
+            .btn-exit
+                background: transparent
+                border: none
+                color: variables.$color-white
+                cursor: pointer
+                margin-left: 0.5rem
+
             .link
                 text-decoration: none
             
