--- a/Front/src/Style/variables.sass
+++ b/Front/src/Style/variables.sass
@@ -5,5 +5,6 @@ $color-white: #FFFFFF
 	
 $main-color: #5400BC
 $color-puple-80: #a86cf3
+$color-puple-20: #330071
 $gradient-color: linear-gradient(160deg, #5400BC, #330071)
 $gradient-pink_puple: linear-gradient(160deg, #7B00E7, #330071 70%)
