Foi ajustado alguns pequenos detalhes de usabilidade

--- a/Front/src/Componets/Table/style.sass
+++ b/Front/src/Componets/Table/style.sass
@@ -78,16 +78,18 @@ table
                         transition: all .3s
 
 .green
-    background-color: green
+    background-color: #01a30c
     border-radius: 50%
     height: 2rem
     width: 2rem
+    cursor: pointer
 
 .red
-    background-color: red
+    background-color: #b40000
     border-radius: 50%
     height: 2rem
     width: 2rem
+    cursor: pointer
 
 @keyframes shimmer
     0%
