--- a/Front/src/Componets/Forms/style.sass
+++ b/Front/src/Componets/Forms/style.sass
@@ -10,6 +10,17 @@
     text-align: center
     width: 30vw
 
+    .error
+        display: flex
+        align-items: center
+        background-color: rgba(167, 0, 0, 0.192)
+        padding: 0 1rem
+        height: 2rem
+        border-radius: 1rem
+        border: 1px solid rgb(95, 0, 0)
+        color: rgb(95, 0, 0)
+        font-weight: 600
+
     form
         width: 80%
     
