--- a/Front/src/Componets/Header/style.sass
+++ b/Front/src/Componets/Header/style.sass
@@ -5,6 +5,7 @@ header
     position: fixed
     align-items: center
     justify-content: space-between
+    transition: all 0.6s ease-in-out
     padding: 0 5rem
     height: 10vh
     width: 100%
@@ -31,3 +32,7 @@ header
             li
                 padding: 0 1rem
                 color: variables.$color-white
+
+.scrolled
+    background: variables.$gradient-pink_puple
+    
