Foi acresentado o tutorial de como utilizar os botões na tela dos dados

--- a/Front/src/Componets/Table/style.sass
+++ b/Front/src/Componets/Table/style.sass
@@ -9,7 +9,6 @@ table
     height: auto
     padding: 2rem
     table-layout: fixed
-    display: none
 
     thead
         height: 6vh
@@ -63,11 +62,11 @@ table
                 align-items: center
 
 .card
-    display: grid;
-    width: 90%;
-    gap: 2rem;
-    padding: 1rem;
-    grid-template-columns: repeat(2, 1fr);
+    display: none
+    width: 90%
+    gap: 2rem
+    padding: 1rem
+    grid-template-columns: repeat(2, 1fr)
     margin: 0 auto
 
     .card-item
@@ -119,7 +118,7 @@ table
     height: 154px
 
 button
-    background-color: transparent
+    background-color: variables.$color-white
     border: none
     cursor: pointer
 
