--- a/Front/src/Componets/MenuActions/style.sass
+++ b/Front/src/Componets/MenuActions/style.sass
@@ -7,6 +7,7 @@
     flex-direction: column-reverse
     left: 95%
     top: 90%
+    z-index: 1000
     
     .checkbox
         opacity: 0
@@ -51,7 +52,7 @@
             display: flex
             align-items: center
             justify-content: center
-            color: variables.$main-color
+            color: variables.$main-color !important
             width: 50px
             height: 50px
             border-radius: 50%
